jFinal will switch to jSqlBox & H2